takamaka_examples/src/takamaka/tests/errors/illegalstaticfieldupdate/C.java
package takamaka.tests.errors.illegalstaticfieldupdate;

public class C {

	public static int i;

	public C() {
		i++;
	}
}
